--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "dev:docker": "npm run prisma:docker & next dev",
+    "prisma:docker": "npm run prisma:migrate && npm run studio",
+    "prisma:migrate": "prisma migrate deploy"
   },
   "dependencies": {
-    "@reactgjs/gest": "^0.6.3",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.16.1",
     "@vercel/analytics": "^1.5.0",
     "geist": "^1.5.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
