--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prisma:migrate": "prisma migrate deploy"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.16.1",
     "@vercel/analytics": "^1.5.0",
@@ -20,7 +21,8 @@
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-resizable-panels": "^3.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
