--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/analytics": "^1.5.0",
     "formidable": "^3.5.4",
     "geist": "^1.5.1",
+    "jotai": "^2.14.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
